# jacobs-json-schema

./: .gitignore  .gitmodules  .gitpod.yml  .readthedocs.yaml  AGENTS.md  README.md  Taskfile.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-extras.txt  requirements.txt
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: index.md  integrated.md  standalone.md
jacobsjsonschema/: _version.py  bool_compare_util.py  draft2019_09.py  draft2020_12.py  draft4.py  draft6.py  draft7.py  json_types.py  validator.py  vocabularies.py
tests/: context.py  test_references.py  test_suite.py  test_suite_4.py  test_suite_4_docs.py  test_suite_6.py  test_suite_docs.py  test_validate.py
tests/integrated/: test_suite_2019_09_docs.py  test_suite_2020_12_docs.py  test_suite_4_docs.py  test_suite_6_docs.py  test_suite_7_docs.py
tests/standalone/: test_suite_2019_09.py  test_suite_4.py  test_suite_6.py  test_suite_7.py
tests/unittests/: test_invalid_schema.py  test_lazy.py  test_references.py  test_validate.py
